--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,9 @@ DISTANCE_CUTOFF_DEFAULT="0.12"
 EXPANDED_CONTEXT_DEFAULT="False"
 
 # Tool variables
-SEARX_HOST = "https://searxng.nicfab.eu/"
-TOP_K_WIKI = "5"
-WOLFRAM_APP_ID = ""
+SEARX_HOST="https://searxng.nicfab.eu/"
+TOP_K_WIKI="5"
+WOLFRAM_APP_ID=""
 
 ###########################################################
 ####################### Prompting #########################
@@ -21,25 +21,28 @@ ASSISTANT_PREFIX="### Assistant:"
 # PRIMARY_DIRECTIVE
 
 PRIMARY_DIRECTIVE="You are an AI assistant. Your main objective is to follow all instructions and complete all tasks written in the 'Instructions:' section, then respond with the output format specified in the 'Format:' section.
-You are completely on your own, and cannot ask for more information or clarification.
+You are completely on your own and cannot ask for more information or clarification.
 You have no abilities or resources unless they are explicitly listed."
 
-# GENERATE THOUGHTS DIRECTIVE
+# GENERATE_THOUGHTS_DIRECTIVE
 # Variables: _TASK_ - current objective
 # Desired Output: Resources and abilities for completing _TASK_ - used for the agent's context
 
 GENERATE_THOUGHTS_DIRECTIVE="Write down some observations on what one would require to complete _TASK_. In particular, you should respond with 2 items:
-- Resources one would need to complete _TASK_; and
-- Abilities one would need to complete _TASK_.
-Your observations should consist of one or two sentences per category.
+- Resources one would need to complete _TASK_
+- Abilities one would need to complete _TASK_
 
 Format:
 Respond with your observations in the following format:
 Resources: (one or two sentences about the resources required to complete _TASK_)
 Abilities: (one or two sentences about the abilities required to complete _TASK_)
-Do not respond with anything but these observations."
+Do not respond with anything but these observations.
 
-# SUMMARIZE DIRECTIVE
+Example:
+Resources: To complete _TASK_, one would need access to a reliable internet connection and a web browser.
+Abilities: The person completing _TASK_ should have basic computer literacy and be able to navigate websites efficiently."
+
+# SUMMARIZE_DIRECTIVE
 # Variables: _TEXT_ - text to summarize
 # Desired output: a summary of the text
 
@@ -47,12 +50,15 @@ SUMMARIZE_DIRECTIVE="Summarize the following text:
 _TEXT_
 (End text)
 
-The summary should be at most one third the length of the original text.
+The summary should be at most one-third the length of the original text.
 
 Format:
-Respond with the summary of the text and nothing else."
+Respond with the summary of the text and nothing else.
 
-# ASSESS ABILITY DIRECTIVE
+Example:
+Summarized text: The quick brown fox jumps over the lazy dog."
+
+# ASSESS_ABILITY_DIRECTIVE
 # Variables: _TASK_ - current objective
 # Desired Output: 'yes' if model can complete _TASK_, 'no' otherwise
 
@@ -61,10 +67,13 @@ Can you complete _TASK_ entirely with no further information, right now?
 If completing _TASK_ requires resources or abilities that you don't have access to, your response should be 'No'.
 
 Format:
-Respond with either the word 'No' or the word 'Yes', depending on your answer to the question above.
-Do not respond with anything but one of these two things; do not ask any questions of the user."
+Respond with either 'Yes' or 'No', depending on your answer to the question above.
+Do not respond with anything but one of these two options.
 
-# DO OBJECTIVE DIRECTIVE
+Example:
+Yes"
+
+# DO_OBJECTIVE_DIRECTIVE
 # Variables: _TASK_ - current objective
 # Desired Output: the output from completing _TASK_
 
@@ -76,47 +85,91 @@ If you cannot respond with the result of completing _TASK_, your response should
 
 Format:
 Respond with the text from _TASK_, or the phrase 'I cannot', depending on the criteria above.
-Do not respond with anything else; do not ask any questions of the user."
+Do not respond with anything else.
 
-# SPLIT OBJECTIVE DIRECTIVE
-# Additional context: processed tasks in current objective
-# Variables: _TASK_ - current objective, _MAX_TASKS_ - maximum number of tasks in a list
-# Desired Output: Numbered list of subobjectives for _TASK_
+Example:
+Completed _TASK_ output: The result of completing the task."
 
-SPLIT_OBJECTIVE_DIRECTIVE="Develop a comprehensive plan to complete _TASK_. The plan should come as a list of tasks, each a single step in the process of completing _TASK_.
-The list should be written in the order that the tasks must be completed.
-Do not include tasks that have already been completed.
-The number of tasks in the list should be between 1 and _MAX_TASKS_. 
-Each task should be one sentence.
+# SPLIT_OBJECTIVE_DIRECTIVE
+# Variables: _MAX_TASKS_ - maximum number of tasks to split
+# Desired Output: A numbered list of sub-tasks required to complete the objective
 
-Format:
-Respond with the numbered list in the following format:
-1. (first task to be completed)
-2. (second task to be completed)
-etc.
-Do not respond with anything other than the list; do not ask for clarifications or anything else from the user.
-Each item on the list should be one sentence."
+SPLIT_OBJECTIVE_DIRECTIVE="Split the following objective into a numbered list of sub-tasks, each on a new line:
+_OBJECTIVE_
+(End objective)
 
-# ASSESS TOOL DIRECTIVE
-# Variables: _TASK_ - current objective, _TOOL_NAME_ - tool name (described in context)
-# Desired Output: 'yes' if _TOOL_ can complete _TASK_, 'no' otherwise
-
-ASSESS_TOOL_DIRECTIVE="Answer the following question:
-Could the _TOOL_NAME_ tool complete _TASK_ entirely by itself with a single input?
-If there are resources or abilities that are required for completing _TASK_ that are not available to the tool, you should respond with the word 'No'.
+Each sub-task should be numbered, starting from 1, and should be separated by a newline character.
+You should split the objective into a maximum of _MAX_TASKS_ sub-tasks.
+If there are more sub-tasks, only include the first _MAX_TASKS_ sub-tasks in your response.
 
 Format:
-Respond with either the word 'No' or the word 'Yes', depending on your answer to the question above.
-Do not respond with anything but one of these two things; do not ask any questions of the user."
+Respond with a numbered list of sub-tasks required to complete the objective, each on a new line.
+Do not include more than _MAX_TASKS_ sub-tasks in your response.
+Do not respond with anything else.
 
-# USE TOOL DIRECTIVE
-# Variables: _TASK_ - current objective, _TOOL_NAME_ - tool name (described in context)
-# Desired output: input for the tool that would achieve _TASK_, or 'I cannot' if not possible
+Example:
+1. Sub-task 1
+2. Sub-task 2
+3. Sub-task 3"
 
-USE_TOOL_DIRECTIVE="Provide an input for the _TOOL_NAME_ tool that will complete _TASK_.
-Specifically, when the desired input is passed to the _TOOL_NAME_ tool, the tool will complete _TASK_ and provide the result.
-If you cannot or need more information, respond with the phrase 'I cannot'.
+# ASSESS_TOOL_DIRECTIVE
+# Variables: _TOOL_NAME_ - name of the tool to assess
+# Desired Output: 'yes' if the tool is available, 'no' otherwise
+
+ASSESS_TOOL_DIRECTIVE="Assess whether the following tool is available to you:
+Tool name: _TOOL_NAME_
+
+If you have access to the tool, respond with 'Yes'. Otherwise, respond with 'No'.
 
 Format:
-Respond with the input for the tool or the phrase 'I cannot' and nothing else.
-Do not respond with anything but one of these two things; do not ask for clarification."
+Respond with either 'Yes' or 'No', depending on your access to the tool.
+Do not respond with anything but one of these two options.
+
+Example:
+Yes"
+
+# USE_TOOL_DIRECTIVE
+# Variables: _TOOL_NAME_ - name of the tool to use
+# Desired Output: the output from using the tool
+
+USE_TOOL_DIRECTIVE="Use the following tool:
+Tool name: _TOOL_NAME_
+
+Use the tool as necessary to complete the objective. You can assume that you have the required resources and abilities to use the tool.
+If you cannot use the tool to complete the objective, respond with the phrase 'I cannot' and nothing else.
+
+Format:
+Respond with the output from using the tool, or the phrase 'I cannot', depending on the criteria above.
+Do not respond with anything else.
+
+Example:
+Tool output: The result of using the tool."
+
+###########################################################
+####################### Context ###########################
+###########################################################
+
+# INITIAL_ABILITIES
+INITIAL_ABILITIES="- Following Instructions: You follow instructions exceptionally well and pay close attention to them.
+- Generating Text: You are an AI and can generate text. You can use this ability for tasks such as writing, summarizing, making decisions, answering questions, and developing plans.
+- Using Tools: You can use any tools that are available to you."
+
+# INITIAL_RESOURCES
+INITIAL_RESOURCES="None"
+
+# OTHER_VARIABLES
+MAX_CONTEXT_LENGTH="2048"
+MAX_SUMMARIES="3"
+MAX_TASKS="6"
+RECURSION_MAX="3"
+DISTANCE_CUTOFF="0.12"
+EXPANDED_CONTEXT="False"
+
+# Example Tool Configuration
+
+[TOOLS]
+Wikipedia Search
+active="true"
+execute="true"
+desc="A tool for searching Wikipedia"
+
